--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-	<title>CLADevs - Home</title>
-	<link rel="stylesheet" href="./assets/css/style.css">
+    <title>CLADevs - Home</title>
+    <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
 </head>
-
 <body>
-	<header>
-		<nav>
-			<h1>CLADevs Team</h1>
-			<ul id="nav">
-				<li><a class="clicked" href="./">Home</a></li>
-				<li><a class="notclicked" href="https://github.com/CLADevs">Github</a></li>
-				<li><a class="notclicked" href="https://discord.gg/xRm5pcM">Discord</a></li>
-			</ul>
-		</nav>
-	</header>
-
-	<div>
-		<h2 class="welcome">Welcome to CLADevs Site!</h2>
-	</div>
+<header>
+    <nav>
+        <h1>CLADevs Team</h1>
+        <ul id="nav">
+            <li><a class="clicked" href="./">Home</a></li>
+            <li><a class="notclicked" href="https://github.com/CLADevs">GitHub</a></li>
+            <li><a class="notclicked" href="https://discord.gg/xRm5pcM">Discord</a></li>
+        </ul>
+    </nav>
+</header>
+<div class="welcome">
+    <h2>Welcome to CLADevs Site!</h2>
+</div>
 </body>
 </html>
